--- a/index.html
+++ b/index.html
@@ -49,18 +49,22 @@
 
 
     <div class="bottom-side">
+
         <div class="bottom-row">
-            <div class="logo">
+
+            <div class="logo">            
                 <img src="img/logo.jpg">
             </div>
+
             <div class="links-container">
 
                 <div class="navbar-item">
+
                     <nav class="nav-item">
+
                         <ul id="myDiv">
 
-                            <li id="navlink-one" class="navlink"
-                                onmouseover="navHoverContent('startup-dropdown-content')">
+                            <li id="navlink-one" class="navlink">
                                 <a class="front-menu">
                                     Start-Up</a>
 
@@ -385,7 +389,7 @@
                 <img src="./img/hero.jpeg" alt="Los Angeles" style="width:100%;">
 
                 <div class="carousel-caption">
-                    <h1 class="tagline-one">We Help You Bussiness Innovate And Grow</h1>
+                    <h1 class="tagline-one">We Help You Bussinesses Innovate And Grow</h1>
                 </div>
 
                 <div class="contact-button">
@@ -399,7 +403,7 @@
                 <img src="./img/hero.jpeg" alt="Chicago" style="width:100%;">
 
                 <div class="carousel-caption">
-                    <h1 class="tagline-one">We Help You Bussiness Innovate And Grow</h1>
+                    <h1 class="tagline-one">The Best Bussiness Support</h1>
                 </div>
 
                 <div class="contact-button">
@@ -412,7 +416,7 @@
                 <img src="./img/hero.jpeg" alt="New york" style="width:100%;">
 
                 <div class="carousel-caption">
-                    <h1 class="tagline-one">We Help You Bussiness Innovate And Grow</h1>
+                    <h1 class="tagline-one">Expert Financial Advice</h1>
                 </div>
 
                 <div class="contact-button">
