added media queries for mobile

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/mobile.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    
 
 </head>
 
 <body>
 
-    <!-- <div class="top-container"> -->
-
-
     <div class="upper-side">
+
         <div class="upper-row">
 
             <div class="left-side">
@@ -28,9 +29,11 @@
                     <li><a>9898989899</a></li>
 
                 </ul>
+
             </div>
 
             <div class="right-side">
+
                 <ul class="icon">
 
                     <li><a class="fa fa-facebook" href="#"></a></li>
@@ -39,14 +42,12 @@
                     <li><a class="fa fa-youtube" href="#"></a></li>
 
                 </ul>
+
             </div>
 
         </div>
+
     </div>
-
-
-
-
 
     <div class="bottom-side">
 
