--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
+
 
 </head>
 
@@ -25,8 +25,8 @@
             <div class="left-side">
 
                 <ul class="left-info">
-                    <li><a>Mon-Fri 09:00-17:00</a></li>
-                    <li><a>9898989899</a></li>
+                    <li><a class="fa fa-clock-o" href="#">Mon-Fri 09:00-17:00</a></li>
+                    <li><a class="fa fa-phone" href="#">+919898989899</a></li>
 
                 </ul>
 
@@ -53,7 +53,7 @@
 
         <div class="bottom-row">
 
-            <div class="logo">            
+            <div class="logo">
                 <img src="img/logo.jpg">
             </div>
 
@@ -63,10 +63,20 @@
 
                     <nav class="nav-item">
 
+                        <div class="nav-bar-menu-mobile">
+
+                            <p>
+                                <span onclick="myFunction()">
+                                    <a class="fa fa-bars" href="#"></a>
+                                </span>
+                            </p>
+
+                        </div>
+
                         <ul id="myDiv">
 
                             <li id="navlink-one" class="navlink">
-                                <a class="front-menu">
+                                <a class="front-menu"  onclick="onMenuItemClick(this)">
                                     Start-Up</a>
 
                                 <ul id="startup-link" class="link-one">
@@ -124,7 +134,7 @@
                             </li>
 
                             <li id="navlink-two" class="navlink">
-                                <a class="front-menu">IP & Legal</a>
+                                <a class="front-menu"  onclick="onMenuItemClick(this)" >IP & Legal</a>
 
                                 <ul id="ip-link" class="link-one">
                                     <div class="dropdown-content">
@@ -168,7 +178,7 @@
                             </li>
 
                             <li id="navlink-three" class="navlink">
-                                <a class="front-menu">Fundraising</a>
+                                <a class="front-menu" onclick="onMenuItemClick(this)">Fundraising</a>
 
 
                                 <ul id="fundraising-link" class="link-one">
@@ -212,7 +222,7 @@
                             </li>
 
                             <li id="navlink-four" class="navlink">
-                                <a class="front-menu">Compliance</a>
+                                <a class="front-menu"  onclick="onMenuItemClick(this)">Compliance</a>
 
                                 <ul id="compliance-link" class="link-one">
                                     <div class="dropdown-content">
@@ -265,7 +275,7 @@
                             </li>
 
                             <li id="navlink-five" class="navlink">
-                                <a class="front-menu">HR Services</a>
+                                <a class="front-menu"  onclick="onMenuItemClick(this)">HR Services</a>
 
                                 <ul id="hr-link" class="link-one">
                                     <div class="dropdown-content">
@@ -327,7 +337,7 @@
                             </li>
 
                             <li id="navlink-six" class="navlink">
-                                <a class="front-menu">VCFO</a>
+                                <a class="front-menu"  onclick="onMenuItemClick(this)">VCFO</a>
 
                                 <ul id="vcfo-link" class="link-one">
                                     <div class="dropdown-content">
