--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <ul id="myDiv">
 
                             <li id="navlink-one" class="navlink">
-                                <div class="d-flex justify-content-between" onclick="onMenuItemClick(this)">
+                                <div class="justify-content-between" onclick="onMenuItemClick(this)">
                                     <a class="front-menu">
                                         Start-Up</a>
                                     <div class="expand">
@@ -138,7 +138,7 @@
                             </li>
 
                             <li id="navlink-two" class="navlink">
-                                <div class="d-flex justify-content-between" onclick="onMenuItemClick(this)">
+                                <div class="justify-content-between" onclick="onMenuItemClick(this)">
                                     <a class="front-menu">
                                         IP & Legal</a>
                                     <div class="expand">
@@ -189,7 +189,7 @@
                             </li>
 
                             <li id="navlink-three" class="navlink">
-                                <div class="d-flex justify-content-between" onclick="onMenuItemClick(this)">
+                                <div class=" justify-content-between" onclick="onMenuItemClick(this)">
                                     <a class="front-menu">
                                         Fundraising</a>
                                     <div class="expand">
@@ -238,7 +238,7 @@
                             </li>
 
                             <li id="navlink-four" class="navlink">
-                                <div class="d-flex justify-content-between" onclick="onMenuItemClick(this)">
+                                <div class=" justify-content-between" onclick="onMenuItemClick(this)">
                                     <a class="front-menu">
                                         Compliance</a>
                                     <div class="expand">
@@ -297,7 +297,7 @@
                             </li>
 
                             <li id="navlink-five" class="navlink">
-                                <div class="d-flex justify-content-between" onclick="onMenuItemClick(this)">
+                                <div class=" justify-content-between" onclick="onMenuItemClick(this)">
                                     <a class="front-menu">
                                         HR Services</a>
                                     <div class="expand">
@@ -365,7 +365,7 @@
                             </li>
 
                             <li id="navlink-six" class="navlink">
-                                <div class="d-flex justify-content-between" onclick="onMenuItemClick(this)">
+                                <div class=" justify-content-between" onclick="onMenuItemClick(this)">
                                     <a class="front-menu">
                                         VCFO</a>
                                     <div class="expand">
