--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.2.0/tailwind.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <link rel="stylesheet" href="css/flaticon.css">
 
-    <script src="https://cdn.tailwindcss.com"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script> -->
 
 </head>
 
@@ -24,7 +21,6 @@
 
     <div id="contact-us-animation"></div>
 
-    <!-- <div class="app-header"> -->
     <div class="upper-side">
 
         <div class="upper-row">
@@ -422,7 +418,6 @@
         </div>
     </div>
 
-    <!-- </div> -->
 
     <div class="app-content">
 
@@ -499,6 +494,7 @@
             </button>
         </div>
     </div>
+
     <div class="icons-container">
         <div class="vertival-image">
             <img src="img/vertical_1.jpg">
@@ -539,7 +535,7 @@
                     <img src="./img/icon/governance.png" alt="">
                 </div>
                 <div class="icon-details">
-                    <h1>360 degree</h1>
+                    <h1>360°</h1>
                     <h2>Governance</h2>
                     <p></p>
                 </div>
@@ -570,6 +566,74 @@
         </div>
     </div>
 
+    <!-- 3rd Block -->
+    <div class="services-block">
+        <div class="services-row">
+
+            <div class="container-animated" data-aos="fade-up" data-aos-delay="100">
+                <div class="feature-item" id="inrow-box1">
+                    <div class="border-box">
+                        <!-- <div class="animation-icon">
+                            
+                        </div> -->
+                        <div class="caption">
+                            <img src="./img/icon/wealth.png">
+                            <h2>Accounting</h2>
+                            <p>Relax and focus on business while your finance operations are managed by professionals</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-animated" data-aos="fade-up" data-aos-delay="200">
+                <div  class="feature-item" id="inrow-box2">
+                    <div class="border-box">
+                        <!-- <div class="animation-icon">
+                            <img src="./img/icon/wealth.png">
+                        </div> -->
+                        <div class="caption">
+                            <img src="./img/icon/wealth.png">
+                            <h2>Startup</h2>
+                            <p>Relax and focus on business while your finance operations are managed by professionals</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-animated" data-aos="fade-up" data-aos-delay="300">
+                <div class="feature-item" id="inrow-box3">
+                    <div class="border-box">
+                        <!-- <div class="animation-icon">
+                            <img src="./img/icon/wealth.png">
+                        </div> -->
+                        <div class="caption">
+                            <img src="./img/icon/wealth.png">
+                            <h2>Taxes</h2>
+                            <p>Relax and focus on business while your finance operations are managed by professionals</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container-animated" data-aos="fade-up" data-aos-delay="400">
+                <div class="feature-item" id="inrow-box4">
+                    <div class="border-box">
+                        <!-- <div class="animation-icon">
+                            <img src="./img/icon/wealth.png">
+                        </div> -->
+                        <div class="caption">
+                            <img src="./img/icon/wealth.png">
+                            <h2>Payroll</h2>
+                            <p>Relax and focus on business while your finance operations are managed by professionals</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- 3rd Block -->
+
     <div class="footer">
         <div class="max-width-footer">
 
@@ -594,7 +658,7 @@
                             <span class="fa fa-envelope"></span>
                             <span class="id">youremail@email.com</span>
                         </div>
-    
+
                         <div class="company-link">
                             <span class="fa fa-globe"></span>
                             <span class="link">bizallys.com</span>
