--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <div id="contact-us-animation">
         <div class="d-flex justify-content-center">
             <div class="d-flex chat-with-us" onclick="chatWithUs(this)">
-                <svg class="whatsapp" width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg" style="box-sizing: content-box;"><path d="M7.67003 22.659L8.63537 23.223C10.2633 24.1724 12.1148 24.6709 13.9994 24.667C16.109 24.667 18.1713 24.0414 19.9254 22.8693C21.6796 21.6973 23.0467 20.0314 23.8541 18.0823C24.6614 16.1332 24.8727 13.9885 24.4611 11.9194C24.0495 9.85023 23.0336 7.94961 21.5418 6.45785C20.0501 4.96609 18.1495 3.95019 16.0803 3.53862C14.0112 3.12704 11.8665 3.33828 9.91741 4.14561C7.96833 4.95295 6.30243 6.32012 5.13036 8.07424C3.95829 9.82837 3.3327 11.8907 3.3327 14.0003C3.3327 15.915 3.83537 17.751 4.77803 19.3657L5.3407 20.331L4.47003 23.5323L7.67003 22.659ZM0.671367 27.3337L2.47403 20.7097C1.28622 18.6735 0.662161 16.3576 0.666034 14.0003C0.666034 6.63633 6.63537 0.666992 13.9994 0.666992C21.3634 0.666992 27.3327 6.63633 27.3327 14.0003C27.3327 21.3643 21.3634 27.3337 13.9994 27.3337C11.6431 27.3375 9.32824 26.7139 7.2927 25.527L0.671367 27.3337ZM9.18737 7.74433C9.36603 7.73099 9.54603 7.73099 9.7247 7.73899C9.7967 7.74433 9.8687 7.75233 9.9407 7.76033C10.1527 7.78433 10.386 7.91366 10.4647 8.09233C10.862 8.99366 11.2487 9.90166 11.622 10.8123C11.7047 11.015 11.6554 11.275 11.498 11.5283C11.3898 11.6996 11.2728 11.8652 11.1474 12.0243C10.9967 12.2177 10.6727 12.5723 10.6727 12.5723C10.6727 12.5723 10.5407 12.7297 10.5914 12.9257C10.61 13.0003 10.6714 13.1083 10.7274 13.199L10.806 13.3257C11.1474 13.895 11.606 14.4723 12.166 15.0163C12.326 15.171 12.482 15.3297 12.65 15.4777C13.274 16.0283 13.9807 16.4777 14.7434 16.811L14.75 16.8137C14.8634 16.863 14.9207 16.8897 15.086 16.9603C15.1687 16.995 15.254 17.0257 15.3407 17.0483C15.4303 17.0711 15.5246 17.0668 15.6117 17.036C15.6988 17.0051 15.7748 16.9491 15.83 16.875C16.7954 15.7057 16.8834 15.6297 16.8914 15.6297V15.6323C16.9584 15.5698 17.0381 15.5223 17.125 15.4931C17.212 15.4639 17.3041 15.4536 17.3954 15.463C17.4754 15.4683 17.5567 15.483 17.6314 15.5163C18.3394 15.8403 19.498 16.3457 19.498 16.3457L20.274 16.6937C20.4047 16.7563 20.5234 16.9043 20.5274 17.047C20.5327 17.1363 20.5407 17.2803 20.51 17.5443C20.4674 17.8897 20.3634 18.3043 20.2594 18.5217C20.1881 18.67 20.0936 18.8059 19.9794 18.9243C19.8448 19.0656 19.6975 19.1941 19.5394 19.3083C19.4846 19.3495 19.4291 19.3895 19.3727 19.4283C19.2069 19.5335 19.0365 19.6314 18.862 19.7217C18.5187 19.904 18.1396 20.0087 17.7514 20.0283C17.5047 20.0417 17.258 20.0603 17.01 20.047C16.9994 20.047 16.2527 19.931 16.2527 19.931C14.357 19.4324 12.6039 18.4983 11.1327 17.203C10.8314 16.9377 10.5527 16.6523 10.2674 16.3683C9.0807 15.1883 8.1847 13.915 7.6407 12.7123C7.36226 12.122 7.21185 11.4795 7.19937 10.827C7.19387 10.0175 7.4585 9.22921 7.95137 8.58699C8.0487 8.46166 8.1407 8.33099 8.29937 8.18033C8.4687 8.02033 8.57537 7.93499 8.69137 7.87633C8.8456 7.79903 9.01385 7.75368 9.18603 7.74299L9.18737 7.74433Z" fill="white"></path></svg>
+                <svg class="whatsapp" width="28" height="28" viewBox="0 0 28 28" fill="none"
+                    xmlns="http://www.w3.org/2000/svg" style="box-sizing: content-box;">
+                    <path
+                        d="M7.67003 22.659L8.63537 23.223C10.2633 24.1724 12.1148 24.6709 13.9994 24.667C16.109 24.667 18.1713 24.0414 19.9254 22.8693C21.6796 21.6973 23.0467 20.0314 23.8541 18.0823C24.6614 16.1332 24.8727 13.9885 24.4611 11.9194C24.0495 9.85023 23.0336 7.94961 21.5418 6.45785C20.0501 4.96609 18.1495 3.95019 16.0803 3.53862C14.0112 3.12704 11.8665 3.33828 9.91741 4.14561C7.96833 4.95295 6.30243 6.32012 5.13036 8.07424C3.95829 9.82837 3.3327 11.8907 3.3327 14.0003C3.3327 15.915 3.83537 17.751 4.77803 19.3657L5.3407 20.331L4.47003 23.5323L7.67003 22.659ZM0.671367 27.3337L2.47403 20.7097C1.28622 18.6735 0.662161 16.3576 0.666034 14.0003C0.666034 6.63633 6.63537 0.666992 13.9994 0.666992C21.3634 0.666992 27.3327 6.63633 27.3327 14.0003C27.3327 21.3643 21.3634 27.3337 13.9994 27.3337C11.6431 27.3375 9.32824 26.7139 7.2927 25.527L0.671367 27.3337ZM9.18737 7.74433C9.36603 7.73099 9.54603 7.73099 9.7247 7.73899C9.7967 7.74433 9.8687 7.75233 9.9407 7.76033C10.1527 7.78433 10.386 7.91366 10.4647 8.09233C10.862 8.99366 11.2487 9.90166 11.622 10.8123C11.7047 11.015 11.6554 11.275 11.498 11.5283C11.3898 11.6996 11.2728 11.8652 11.1474 12.0243C10.9967 12.2177 10.6727 12.5723 10.6727 12.5723C10.6727 12.5723 10.5407 12.7297 10.5914 12.9257C10.61 13.0003 10.6714 13.1083 10.7274 13.199L10.806 13.3257C11.1474 13.895 11.606 14.4723 12.166 15.0163C12.326 15.171 12.482 15.3297 12.65 15.4777C13.274 16.0283 13.9807 16.4777 14.7434 16.811L14.75 16.8137C14.8634 16.863 14.9207 16.8897 15.086 16.9603C15.1687 16.995 15.254 17.0257 15.3407 17.0483C15.4303 17.0711 15.5246 17.0668 15.6117 17.036C15.6988 17.0051 15.7748 16.9491 15.83 16.875C16.7954 15.7057 16.8834 15.6297 16.8914 15.6297V15.6323C16.9584 15.5698 17.0381 15.5223 17.125 15.4931C17.212 15.4639 17.3041 15.4536 17.3954 15.463C17.4754 15.4683 17.5567 15.483 17.6314 15.5163C18.3394 15.8403 19.498 16.3457 19.498 16.3457L20.274 16.6937C20.4047 16.7563 20.5234 16.9043 20.5274 17.047C20.5327 17.1363 20.5407 17.2803 20.51 17.5443C20.4674 17.8897 20.3634 18.3043 20.2594 18.5217C20.1881 18.67 20.0936 18.8059 19.9794 18.9243C19.8448 19.0656 19.6975 19.1941 19.5394 19.3083C19.4846 19.3495 19.4291 19.3895 19.3727 19.4283C19.2069 19.5335 19.0365 19.6314 18.862 19.7217C18.5187 19.904 18.1396 20.0087 17.7514 20.0283C17.5047 20.0417 17.258 20.0603 17.01 20.047C16.9994 20.047 16.2527 19.931 16.2527 19.931C14.357 19.4324 12.6039 18.4983 11.1327 17.203C10.8314 16.9377 10.5527 16.6523 10.2674 16.3683C9.0807 15.1883 8.1847 13.915 7.6407 12.7123C7.36226 12.122 7.21185 11.4795 7.19937 10.827C7.19387 10.0175 7.4585 9.22921 7.95137 8.58699C8.0487 8.46166 8.1407 8.33099 8.29937 8.18033C8.4687 8.02033 8.57537 7.93499 8.69137 7.87633C8.8456 7.79903 9.01385 7.75368 9.18603 7.74299L9.18737 7.74433Z"
+                        fill="white"></path>
+                </svg>
                 <span class="px-3">Chat with us</span>
             </div>
         </div>
@@ -575,7 +580,7 @@
     <div id="block-2" class="align-items-center d-flex flex-column container">       
         <div class="block-2-title">
             <div class="headline">
-                <h3>WELCOME TO BIZALLYS </h3>
+                <h2>WELCOME TO BIZALLYS </h2>
                 <h1>We Are The Best Accounting Agency</h1>
             </div>
         </div>
@@ -638,21 +643,22 @@
 
             <div class="container-animated first1" data-aos="fade-up" data-aos-delay="100">
                 <div class="feature-item" id="inrow-box1">
-                        <div class="caption">
-                            <img src="./img/icon/wealth.png">
-                            <h2>Accounting</h2>
-                            <p>Relax and focus on business while your finance operations are managed by professionals</p>
-                        </div>
+                    <div class="caption">
+                        <img src="./img/icon/wealth.png">
+                        <h2>Accounting</h2>
+                        <p>Relax and focus on business while your finance operations are managed by professionals</p>
+                    </div>
                 </div>
             </div>
 
             <div class="container-animated second1" data-aos="fade-up" data-aos-delay="200">
-                <div  class="feature-item" id="inrow-box2">
+                <div class="feature-item" id="inrow-box2">
                     <div class="border-box">
                         <div class="caption">
                             <img src="./img/icon/wealth.png">
                             <h2>Startup</h2>
-                            <p>Relax and focus on business while your finance operations are managed by professionals</p>
+                            <p>Relax and focus on business while your finance operations are managed by professionals
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -664,7 +670,8 @@
                         <div class="caption">
                             <img src="./img/icon/wealth.png">
                             <h2>Taxes</h2>
-                            <p>Relax and focus on business while your finance operations are managed by professionals</p>
+                            <p>Relax and focus on business while your finance operations are managed by professionals
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -676,7 +683,8 @@
                         <div class="caption">
                             <img src="./img/icon/wealth.png">
                             <h2>Payroll</h2>
-                            <p>Relax and focus on business while your finance operations are managed by professionals</p>
+                            <p>Relax and focus on business while your finance operations are managed by professionals
+                            </p>
                         </div>
                     </div>
                 </div>
