--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
     <div class="app-content">
 
-        <div id="myCarousel" class="carousel slide">
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class=""
                     aria-label="Slide 1"></button>
@@ -447,7 +447,7 @@
                     class=""></button>
             </div>
             <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="10000">
+                <div class="carousel-item active" data-bs-interval="5000">
                     <img src="./img/hero.jpeg" class="d-block w-100" alt="Los Angeles">
 
                     <div class="carousel-caption">
@@ -456,7 +456,7 @@
                     </div>
 
                 </div>
-                <div class="carousel-item" data-bs-interval="2000">
+                <div class="carousel-item" data-bs-interval="5000">
                     <img src="./img/banner_slider.jpg" class="d-block w-100" alt="Chicago">
 
                     <div class="carousel-caption">
@@ -466,7 +466,7 @@
 
                 </div>
 
-                <div class="carousel-item" data-bs-interval="2000">
+                <div class="carousel-item" data-bs-interval="5000">
                     <img src="./img/B2B.jpg" alt="New york" class="d-block w-100">
 
                     <div class="carousel-caption">
@@ -476,7 +476,7 @@
 
                 </div>
 
-                <div class="carousel-item" data-bs-interval="2000">
+                <div class="carousel-item" data-bs-interval="5000">
                     <img src="./img/payroll_slider.jpeg" alt="New york" class="d-block w-100">
 
                     <div class="carousel-caption">
@@ -486,7 +486,7 @@
 
                 </div>
 
-                <div class="carousel-item" data-bs-interval="2000">
+                <div class="carousel-item" data-bs-interval="5000">
                     <img src="./img/profit_slider.jpg" alt="New york" class="d-block w-100">
 
                     <div class="carousel-caption">
