--- a/index.html
+++ b/index.html
@@ -505,7 +505,6 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-    </div>
 
     <div class="icons-container">
         <div class="vertival-image">
@@ -577,14 +576,14 @@
 
         </div>
     </div>
-    <div id="block-2" class="align-items-center d-flex flex-column container">       
+    <div id="block-2" class="align-items-center d-flex flex-column container">
         <div class="block-2-title">
             <div class="headline">
                 <h2>WELCOME TO BIZALLYS </h2>
                 <h1>We Are The Best Accounting Agency</h1>
             </div>
         </div>
-        <div class="block-2-content d-flex flex-wrap pt-5 row column-gap-5">            
+        <div class="block-2-content d-flex flex-wrap pt-5 row column-gap-5">
 
             <div class="icon-with-text col">
                 <div class="finance-icons" id="icon-image-two">
@@ -693,6 +692,39 @@
         </div>
     </div>
     <!-- 3rd Block -->
+
+    <!-- 4th Block -->
+    <div class="fourth-block">
+        <div class="max-width-fourth">
+            <div class="bold-heading">
+                <h1>LATEST VIDEOS</h1>
+            </div>
+
+            <div id="video-button" onclick="videoOnClick()" class="view-all">
+                <button>View All Video</button>
+            </div>
+
+            <div id="blue-video-box" class="row-video-container">
+                <span id="less-view">
+                    <iframe width="350" height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                    <iframe width="350" height="200" src="https://youtu.be/yYX4bvQSqbo?si=OS0NeUXbVN_iYjjQ"></iframe>
+                    <iframe width="350" height="200" src="https://www.youtube.com/watch?v=RUynRN6g4Zs"></iframe>
+                    <iframe width="350" height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                </span>
+                <span id="more-view">
+                    <iframe width="350" height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                    <iframe width="350" height="200" src="https://youtu.be/yYX4bvQSqbo?si=OS0NeUXbVN_iYjjQ"></iframe>
+                </span>
+            </div>
+
+
+        </div>
+    </div>
+
+</div>
+
+
+    <!-- 4th Block -->
 
     <div class="footer">
         <div class="max-width-footer">
