--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="left-side">
 
                 <ul class="left-info">
-                    <li><a class="fa fa-clock-o" href="#">Mon-Fri 09:00-17:00</a></li>
+                    <!-- <li><a class="fa fa-clock-o" href="#">Mon-Fri 09:00-17:00</a></li> -->
                     <li><a class="fa fa-phone" href="#">919043148522</a></li>
 
                 </ul>
@@ -716,7 +716,7 @@
                       </button>
                 </div>
 
-                <div id="carouselExampleControls" class="carousel d-grid" data-bs-ride="carousel">
+                <div id="carouselExampleControls" class="carousel d-grid p-3" data-bs-ride="carousel">
                     <div id="carousel-inner-video" class="carousel-inner">
                       <div class="carousel-item active">
                         <div class="card">
