--- a/index.html
+++ b/index.html
@@ -720,56 +720,54 @@
                     <div id="carousel-inner-video" class="carousel-inner">
                       <div class="carousel-item active">
                         <div class="card">
-                            <iframe height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                            <iframe height="200" src="https://www.youtube.com/embed/yYX4bvQSqbo?mute=1"></iframe>
                             <div class="card-body">
-                                <h5 class="card-title">Card title 2</h5>
+                                <h5 class="card-title">Accounting Basic</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                                     card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                             </div>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <div class="card">
-                            <iframe height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                            <iframe height="200" src="https://www.youtube.com/embed/9_vbbkk-ma8?mute=1"></iframe>
                             <div class="card-body">
-                                <h5 class="card-title">Card title 2</h5>
+                                <h5 class="card-title">Card 2</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                                     card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <div class="card">
-                            <iframe height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                            <iframe height="200" src="https://www.youtube.com/embed/yYX4bvQSqbo?mute=1"></iframe>
                             <div class="card-body">
-                                <h5 class="card-title">Card title 2</h5>
+                                <h5 class="card-title">Card title 3</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                                     card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                             </div>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <div class="card">
-                            <iframe height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                            <iframe height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY?mute=1"></iframe>
                             <div class="card-body">
-                                <h5 class="card-title">Card title 2</h5>
+                                <h5 class="card-title">Card title 4</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                                     card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <div class="card">
-                            <iframe height="200" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                            <iframe height="200" src="https://www.youtube.com/embed/yYX4bvQSqbo?mute=1"></iframe>
                             <div class="card-body">
-                                <h5 class="card-title">Card title 2</h5>
+                                <h5 class="card-title">Card title 5</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                                     card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                             </div>
                         </div>
                       </div>
