added new block

--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@
                 <div class="navbar-item">
                     <nav class="nav-item">
 
-
-
                         <ul id="myDiv">
 
                             <li id="navlink-one" class="navlink">
@@ -639,10 +637,10 @@
         <div class="services-block align-items-center d-flex flex-column">
             <div class="block-2-title">
                 <div class="headline-for-services">
-                    <h1>OUR SERVICES</h1>
+                    <h1>Our Services</h1>
                 </div>
             </div>
-            <div class="services-row pt-4">
+            <div class="services-row py-4">
 
                 <div class="container-animated first1" data-aos="fade-up" data-aos-delay="100">
                     <div class="feature-item" id="inrow-box1">
@@ -702,12 +700,231 @@
         <!-- 3rd Block -->
 
         <!-- 4th Block -->
+        <div class="block-five">
+            <div class="max-width-five mx-5 my-5">
+                <div class="block-five-heading text-lg-center">
+                    <h1>Most Popular Offerings!</h1>
+                </div>
+                <div class="toppanel-offerings">
+                    <ul class="d-flex flex-lg-row justify-content-center my-5">
+                        <li id="default-active-start-business" class="multicolor-links" onclick="multicolortab(event, 'content-start')">
+                            <a>
+                                <img src="./img/icon/start_business.png">Start Business
+                            </a>
+                        </li>
+                        <li id="manage-business" class="multicolor-links" onclick="multicolortab(event, 'content-manage')">
+                            <a>
+                                <img src="./img/icon/manage_business.png">Manage Business
+                            </a>
+                        </li>
+                        <li id="protect-business" class="multicolor-links" onclick="multicolortab(event, 'content-protect')">
+                            <a>
+                                <img src="./img/icon/protect_business.png">Protect Business
+                            </a>
+                        </li>
+                        <li id="virtual-cfo" class="multicolor-links" onclick="multicolortab(event, 'content-virtual')">
+                            <a>
+                                <img src="./img/icon/virtual_cfo.png">Virtual CFO
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div id="manage-business-content" class="all-panel-content">
+
+                        <div id="content-start" style="display: flex;" class="onclick-content flex-wrap justify-content-center row-block-five">
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Private Limited Incorporation</h3>
+                                    <p>Most popular type of Corporate entity and recommended for the Start-ups.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class=" px-4 py-4 card-text">
+                                    <h3>Limited Liability Partnership (LLP)</h3>
+                                    <p>Registered under MCA and ensuring Limited liabilities for its Partners.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class=" px-4 py-4 card-text">
+                                    <h3>One Person Company</h3>
+                                    <p>Registered under MCA and is recommended to the Start-ups having Single Founder.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Partnership Firm</h3>
+                                    <p>Governed by Partnership Act and is recommended for Idea stage business.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Proprietorship Firm</h3>
+                                    <p>Simplest form of doing the business and has no individual business existence.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Foreign Subsidiary</h3>
+                                    <p>Company whose shares are majorly owned by foreign Parent Company.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="content-manage" style="display: flex;" class="onclick-content flex-wrap justify-content-center row-block-five">
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>GST</h3>
+                                    <p>Unified indirect tax that combines several taxes including VAT, Service Tax etc
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class=" px-4 py-4 card-text">
+                                    <h3>Startup India</h3>
+                                    <p>Register with DIPP and avail the benefits made available to Startups.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class=" px-4 py-4 card-text">
+                                    <h3>EPF Registration</h3>
+                                    <p>Registration is mandatory for the business employing more than 20 employees.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>ESI Registration</h3>
+                                    <p>Provides medical facility to employees and is mandatory for the business.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Professional Tax</h3>
+                                    <p>Tax levied by states on employees and Professionals.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>PAN/TAN Application</h3>
+                                    <p>Permanent Account Number and Tax Deduction Account number.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="content-protect"  style="display: flex;" class="onclick-content flex-wrap justify-content-center row-block-five">
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Trademark Registration</h3>
+                                    <p>Filing of application for registering the word mark or logo.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class=" px-4 py-4 card-text">
+                                    <h3>Trademark Objection</h3>
+                                    <p>Process of filing the reply against the Objection raised.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class=" px-4 py-4 card-text">
+                                    <h3>Trademark Assignment</h3>
+                                    <p>Process of assigning the rights of Trademark to the other Person.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Employment Agreement</h3>
+                                    <p>Agreement between the business and employee defines the terms of employment.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Customer/Vendor Agreement</h3>
+                                    <p>Master Service Agreement with your Customers and Agreement with your Vendors.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Terms of Use</h3>
+                                    <p>T&C with the business and its users which is to be placed in the website of
+                                        business.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Privacy Policy</h3>
+                                    <p>statement that discloses ways a business gathers, uses, discloses, and manages a
+                                        customer data.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>ESOP Policy</h3>
+                                    <p>Policy defines the rules and regulations w.r.t. implementation of ESOPs in the
+                                        startup.</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Founders Agreement</h3>
+                                    <p>Agreement between the Founders of the Startup to define the detailed terms
+                                        between themselves.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div id="content-virtual"  style="display: flex;" class="onclick-content flex-wrap justify-content-center row-block-five">
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Virtual CFO Services</h3>
+                                    <p>Virtual chief financial officers offer businesses financial expertise and
+                                        strategic guidance on a flexible,</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class=" px-4 py-4 card-text">
+                                    <h3>CA Services for Startups</h3>
+                                    <p>CAs services to startup companies, ensures financial stability, optimises
+                                        operations, and facilitates growth,</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class=" px-4 py-4 card-text">
+                                    <h3>Legal Services for Start-ups</h3>
+                                    <p>Every start-up is required to draft some basic legal documents and comply with
+                                        essential legal</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Company Valuation for Startups</h3>
+                                    <p>Company Valuation assists entrepreneurs in determining the appeal of a startup
+                                        and its potential</p>
+                                </div>
+                            </div>
+                            <div class="card-fix-border mx-4 my-4">
+                                <div class="px-4 py-4 card-text">
+                                    <h3>Financial Modelling for Startups</h3>
+                                    <p>Financial modeling for startups is a finance tool which is a numerical
+                                        representation of the startup's</p>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <!-- 4th Block -->
+
+        <!-- 5th Block -->
         <div class="fourth-block">
             <div class="max-width-fourth">
                 <div class="bold-heading">
                     <h1>LATEST VIDEOS</h1>
                 </div>
-
+                
                 <div id="video-button" onclick="videoOnClick()" class="view-all">
                     <!-- <button>View All Video</button> -->
                     <button onclick="event.preventDefault();event.stopPropagation();videoCarouselPrevClick()"
@@ -786,22 +1003,6 @@
 
                 </div>
 
-            </div>
-        </div>
-        <!-- 4th Block -->
-
-        <!-- 5th Block -->
-        <div class="fifth-block">
-            <div class="max-width-circle">
-                <div class="circle-design">
-                    <div class="big-circle">
-                        <div class="small-circle">
-                            <div class="bussiness-line">
-                                <h1>Bussiness</h1>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
 
