--- a/index.html
+++ b/index.html
@@ -634,13 +634,13 @@
         <!-- --block-two-- -->
 
         <!-- 3rd Block -->
-        <div class="services-block align-items-center d-flex flex-column">
+        <div class="align-items-center container d-flex flex-column services-block">
             <div class="block-2-title">
                 <div class="headline-for-services">
                     <h1>Our Services</h1>
                 </div>
             </div>
-            <div class="services-row py-4">
+            <div class="services-row py-4 row">
 
                 <div class="container-animated first1" data-aos="fade-up" data-aos-delay="100">
                     <div class="feature-item" id="inrow-box1">
@@ -701,12 +701,12 @@
 
         <!-- 4th Block -->
         <div class="block-five">
-            <div class="max-width-five mx-5 my-5">
-                <div class="block-five-heading text-lg-center">
+            <div class="max-width-five my-5">
+                <div class="block-five-heading text-lg-center mx-5">
                     <h1>Most Popular Offerings!</h1>
                 </div>
-                <div class="toppanel-offerings">
-                    <ul class="d-flex flex-lg-row justify-content-center my-5">
+                <div class="toppanel-offerings container">
+                    <ul class="d-flex flex-lg-row justify-content-center my-5 row p-0">
                         <li id="default-active-start-business" class="multicolor-links" onclick="multicolortab(event, 'content-start')">
                             <a>
                                 <img src="./img/icon/start_business.png">Start Business
